[gd_scene load_steps=2 format=3 uid="uid://bn146p2d3lfc8"]

[ext_resource type="Script" uid="uid://dx6kdv5fpgdx2" path="res://scenes/UI/InteractionDialog.gd" id="1_yi5lp"]

[node name="InteractionDialog" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -210.0
offset_right = 498.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi5lp")

[node name="DialogPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -210.0
offset_right = 300.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="DialogPanel/MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="TitleLabel" type="Label" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="FunctionImage" type="TextureRect" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
stretch_mode = 5

[node name="PromptLabel" type="Label" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="AnswerInput" type="LineEdit" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="DialogPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Enviar"

[node name="CountdownTimer" type="Timer" parent="."]
